fix: implementación en la lógica