@@ -20,144 +20,158 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 public class ReturnService {
 
-    private final ReturnRepository returnRepository;
-    private final AdoptionRepository adoptionRepository;
+	public static final String PENDING_STATUS = "PENDING";
+	public static final String FINALIZED_STATUS = "FINALIZED";
 
-    private static final String RETURN_ID_NOT_VALID = "Invalid identifiers are not accepted.";
+	private static final String RETURN_ID_NOT_VALID = "Invalid identifiers are not accepted";
+	private static final String RETURN_NOT_FOUND = "Return not found";
 
-    @Transactional
-    public ReturnEntity createReturn(
-            ReturnEntity returnEntity,
-            Long currentUserId,
-            String currentUserRole)
-            throws EntityNotFoundException, IllegalOperationException {
+	private final ReturnRepository returnRepository;
+	private final AdoptionRepository adoptionRepository;
 
-        log.info("Return creation process started");
+	/**
+	 * Registra la devolución de una mascota adoptada. La fecha, el estado inicial
+	 * (PENDING) y el refugio (el de la adopción) los asigna el sistema.
+	 */
+	@Transactional
+	public ReturnEntity createReturn(ReturnEntity returnEntity)
+			throws EntityNotFoundException, IllegalOperationException {
+		log.info("Inicia proceso de creación de la devolución");
 
-        if (returnEntity.getReason() == null
-                || returnEntity.getReason().trim().isEmpty()
-                || returnEntity.getAdoption() == null) {
+		if (returnEntity == null)
+			throw new IllegalOperationException("Return cannot be null");
+		if (returnEntity.getReason() == null || returnEntity.getReason().isBlank())
+			throw new IllegalOperationException("The justification for the return must be provided");
+		if (returnEntity.getAdoption() == null || returnEntity.getAdoption().getId() == null)
+			throw new IllegalOperationException("Return must be associated with an existing adoption");
 
-            throw new IllegalOperationException(
-                    "Required attributes cannot be null or empty. "
-                    + "The return justification and adoption must be provided.");
-        }
+		AdoptionEntity adoption = adoptionRepository.findById(returnEntity.getAdoption().getId())
+				.orElseThrow(() -> new EntityNotFoundException("Adoption not found"));
 
-        AdoptionEntity adoption = adoptionRepository.findById(returnEntity.getAdoption().getId())
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "The associated adoption does not exist. "
-                        + "A return can only be registered for a previously completed adoption."));
+		if (!FINALIZED_STATUS.equalsIgnoreCase(adoption.getStatus()))
+			throw new IllegalOperationException(
+					"A return can only be registered for a previously completed adoption");
 
+		validatePetNotAlreadyReturned(adoption);
 
-        returnEntity.setAdoption(adoption);
-        returnEntity.setDate(new Date());
-        returnEntity.setStatus("SOLICITADO");
+		returnEntity.setId(null);
+		returnEntity.setAdoption(adoption);
+		returnEntity.setShelter(adoption.getShelter());
+		returnEntity.setDate(new Date());
+		returnEntity.setStatus(PENDING_STATUS);
 
-        ReturnEntity savedReturn = returnRepository.save(returnEntity);
+		log.info("Termina proceso de creación de la devolución");
+		return returnRepository.save(returnEntity);
+	}
 
-        log.info("Return creation process completed");
-        return savedReturn;
-    }
+	private void validatePetNotAlreadyReturned(AdoptionEntity adoption) throws IllegalOperationException {
+		boolean alreadyReturned = returnRepository.existsByAdoption_Id(adoption.getId())
+				|| (adoption.getPet() != null && returnRepository.existsByAdoption_Pet_Id(adoption.getPet().getId()));
+		if (alreadyReturned)
+			throw new IllegalOperationException(
+					"A return cannot be registered for a pet that has already been returned");
+	}
 
-    @Transactional(readOnly = true)
-    public ReturnEntity readReturn(
-            Long id,
-            Long currentUserId,
-            String currentUserRole)
-            throws EntityNotFoundException, IllegalOperationException {
+	/**
+	 * Obtiene una devolución a partir de su id.
+	 */
+	@Transactional(readOnly = true)
+	public ReturnEntity readReturn(Long id) throws EntityNotFoundException, IllegalOperationException {
+		log.info("Inicia proceso de consultar la devolución con id = {}", id);
 
-        log.info("Return query process started for id = {}", id);
+		if (id == null || id <= 0)
+			throw new IllegalOperationException(RETURN_ID_NOT_VALID);
 
-        if (id == null || id <= 0) {
-            throw new IllegalOperationException(RETURN_ID_NOT_VALID);
-        }
+		ReturnEntity returnEntity = returnRepository.findById(id)
+				.orElseThrow(() -> new EntityNotFoundException(RETURN_NOT_FOUND));
 
-        ReturnEntity returnEntity = returnRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "If the return record does not exist, an error message is displayed."));
+		log.info("Termina proceso de consultar la devolución con id = {}", id);
+		return returnEntity;
+	}
 
-        log.info("Return query process completed for id = {}", id);
-        return returnEntity;
-    }
+	/**
+	 * Obtiene todas las devoluciones registradas.
+	 */
+	@Transactional(readOnly = true)
+	public List<ReturnEntity> readAllReturns() {
+		return readAllReturns(null, null, null);
+	}
 
-    @Transactional(readOnly = true)
-    public List<ReturnEntity> readAllReturns(
-            Long currentUserId,
-            String currentUserRole) {
+	/**
+	 * Obtiene las devoluciones filtrando, de forma opcional, por refugio, mascota
+	 * y usuario (adoptante). Si se combinan varios filtros, todos deben coincidir.
+	 */
+	@Transactional(readOnly = true)
+	public List<ReturnEntity> readAllReturns(Long shelterId, Long petId, Long userId) {
+		log.info("Inicia proceso de consultar las devoluciones");
 
-        log.info("Process of querying all returns started");
+		List<ReturnEntity> returns = returnRepository.findAll().stream()
+				.filter(r -> shelterId == null
+						|| (r.getShelter() != null && shelterId.equals(r.getShelter().getId())))
+				.filter(r -> petId == null
+						|| (r.getAdoption() != null && r.getAdoption().getPet() != null
+								&& petId.equals(r.getAdoption().getPet().getId())))
+				.filter(r -> userId == null
+						|| (r.getAdoption() != null && r.getAdoption().getAdopter() != null
+								&& userId.equals(r.getAdoption().getAdopter().getId())))
+				.toList();
 
-        List<ReturnEntity> returns;
+		if (returns.isEmpty())
+			log.info("No hay devoluciones que cumplan los filtros");
+		return returns;
+	}
 
-        if ("ADMIN".equalsIgnoreCase(currentUserRole)) {
-            returns = returnRepository.findAll();
-        } else {
-            returns = returnRepository.findAll();
-        }
+	/**
+	 * Actualiza la justificación y el estado de una devolución. Una devolución
+	 * procesada y finalizada no admite modificaciones.
+	 */
+	@Transactional
+	public ReturnEntity updateReturn(Long id, ReturnEntity returnUpdate)
+			throws EntityNotFoundException, IllegalOperationException {
+		log.info("Inicia proceso de actualizar la devolución con id = {}", id);
 
-        log.info("Process of querying all returns completed");
-        return returns;
-    }
+		if (id == null || id <= 0)
+			throw new IllegalOperationException(RETURN_ID_NOT_VALID);
+		if (returnUpdate == null || returnUpdate.getReason() == null || returnUpdate.getReason().isBlank()
+				|| returnUpdate.getStatus() == null || returnUpdate.getStatus().isBlank())
+			throw new IllegalOperationException("Return reason and status cannot be null or empty");
 
-    @Transactional
-    public ReturnEntity updateReturn(
-            Long id,
-            ReturnEntity returnUpdate,
-            Long currentUserId,
-            String currentUserRole)
-            throws EntityNotFoundException, IllegalOperationException {
+		ReturnEntity current = returnRepository.findById(id)
+				.orElseThrow(() -> new EntityNotFoundException(RETURN_NOT_FOUND));
 
-        log.info("Return update process started for id = {}", id);
+		if (FINALIZED_STATUS.equalsIgnoreCase(current.getStatus()))
+			throw new IllegalOperationException(
+					"A processed and finalized return does not allow modifications");
 
-        if (id == null || id <= 0) {
-            throw new IllegalOperationException(
-                    "Invalid identifiers or null attributes are not accepted.");
-        }
+		current.setReason(returnUpdate.getReason());
+		current.setStatus(normalizeStatus(returnUpdate.getStatus()));
 
-        ReturnEntity existingReturn = returnRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Return not found."));
+		log.info("Termina proceso de actualizar la devolución con id = {}", id);
+		return returnRepository.save(current);
+	}
 
-        if ("PROCESADO".equalsIgnoreCase(existingReturn.getStatus())
-                || "CERRADO".equalsIgnoreCase(existingReturn.getStatus())) {
+	private String normalizeStatus(String status) throws IllegalOperationException {
+		if (PENDING_STATUS.equalsIgnoreCase(status.trim()))
+			return PENDING_STATUS;
+		if (FINALIZED_STATUS.equalsIgnoreCase(status.trim()))
+			return FINALIZED_STATUS;
+		throw new IllegalOperationException("Invalid return status");
+	}
 
-            throw new IllegalOperationException(
-                    "Once the return has been processed by the shelter, "
-                    + "the justification and details submitted by the user are immutable.");
-        }
+	/**
+	 * Las devoluciones no se pueden eliminar por trazabilidad histórica. Se valida
+	 * primero el id y su existencia, y luego se rechaza la operación.
+	 */
+	@Transactional
+	public void deleteReturn(Long id) throws EntityNotFoundException, IllegalOperationException {
+		log.info("Inicia proceso de eliminar la devolución con id = {}", id);
 
-        if (returnUpdate.getStatus() != null
-                && !existingReturn.getStatus().equalsIgnoreCase(returnUpdate.getStatus())) {
+		if (id == null || id <= 0)
+			throw new IllegalOperationException(RETURN_ID_NOT_VALID);
+		if (!returnRepository.existsById(id))
+			throw new EntityNotFoundException(RETURN_NOT_FOUND);
 
-            if (!"ADMIN".equalsIgnoreCase(currentUserRole)) {
-                throw new IllegalOperationException(
-                        "Only authorized roles can update the return processing status.");
-            }
-
-            existingReturn.setStatus(returnUpdate.getStatus().toUpperCase());
-        }
-
-        ReturnEntity savedReturn = returnRepository.save(existingReturn);
-
-        log.info("Return update process completed for id = {}", id);
-        return savedReturn;
-    }
-
-    @Transactional
-    public void deleteReturn(
-            Long id,
-            Long currentUserId,
-            String currentUserRole)
-            throws IllegalOperationException {
-
-        log.info("Return deletion process started for id = {}", id);
-
-        if (id == null || id <= 0) {
-            throw new IllegalOperationException(RETURN_ID_NOT_VALID);
-        }
-
-        // The rule states that returns CANNOT be deleted for historical traceability purposes.
-        throw new IllegalOperationException(
-                "Return records cannot be deleted due to historical and legal traceability requirements.");
-    }
+		throw new IllegalOperationException(
+				"A return record cannot be deleted for reasons of historical traceability");
+	}
 }
